--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <footer>
+        Coded by Sade Makhubele
+        Code hosted on Github 
+        Website hosted on Netlify
+    </footer>
 </body>
 </html>
