added links to footer

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <footer>
-        Coded by Sade Makhubele
-        Code hosted on Github 
+        Coded by <a href="https://github.com/sademakhubele/" target="_blank"> Sade Makhubele
+        Code hosted on <a href="https://github.com/sademakhubele/SadeM-App.git" target="_blank" >Github 
         Website hosted on Netlify
     </footer>
 </body>
