--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <form>
+            <input type="search" placeholder="Enter city.." required/>
+            <input type="submit" value="search"/>
+        </form>
+
+    </header>
+
     <footer>
         Coded by <a href="https://github.com/sademakhubele/" target="_blank"> Sade Makhubele
         Code hosted on <a href="https://github.com/sademakhubele/SadeM-App.git" target="_blank" >Github 
