added main section, added basic code

--- a/index.html
+++ b/index.html
@@ -11,8 +11,19 @@
             <input type="search" placeholder="Enter city.." required/>
             <input type="submit" value="search"/>
         </form>
-
     </header>
+    <main>
+        <h1>Johanesburg</h1>
+        <p>Wednesday 17:21, Mostly Sunny
+        <br>
+        Precip: 0%
+        <br>
+        Humidity: 34%
+        <br>
+        Wind: 14km/h
+        </p>
+        🌤21&#x2103;
+    </main>
 
     <footer>
         Coded by <a href="https://github.com/sademakhubele/" target="_blank"> Sade Makhubele
