added src folder and css file

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         </form>
     </header>
     <main>
+        <div>
         <h1>Johanesburg</h1>
         <p>Wednesday 17:21, Mostly Sunny
         <br>
@@ -22,7 +23,10 @@
         <br>
         Wind: 14km/h
         </p>
+    </div>
+        <div>
         🌤21&#x2103;
+    </div>
     </main>
 
     <footer>
