--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/style.css" />
+
     <title>Document</title>
 </head>
 <body>
@@ -31,7 +33,7 @@
 
     <footer>
         Coded by <a href="https://github.com/sademakhubele/" target="_blank"> Sade Makhubele
-        Code hosted on <a href="https://github.com/sademakhubele/SadeM-App.git" target="_blank" >Github 
+        Code hosted on <a href="https://github.com/sademakhubele/SadeM-App.git" target="_blank" > Github 
         Website hosted on Netlify
     </footer>
 </body>
