--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="app">
     <header>
         <form>
             <input type="search" placeholder="Enter city.." required/>
@@ -36,5 +37,6 @@
         Code hosted on <a href="https://github.com/sademakhubele/SadeM-App.git" target="_blank" > Github 
         Website hosted on Netlify
     </footer>
+    </div>
 </body>
 </html>
