updated html search form

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="app">
     <header>
-        <form>
-            <input type="search" placeholder="Enter city.." required/>
-            <input type="submit" value="search"/>
+        <form class="search-bar">
+            <input type="search" placeholder="Enter city.." required class="search-bar-input"/>
+            <input type="submit" value="search" class="search-bar-button"/>
         </form>
     </header>
     <main>
