--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
     </main>
 
     <footer>
-        Coded by <a href="https://github.com/sademakhubele/" target="_blank"> Sade Makhubele
-        Code hosted on <a href="https://github.com/sademakhubele/SadeM-App.git" target="_blank" > Github 
-        Website hosted on Netlify
+        Coded by
+        <a href="https://github.com/sademakhubele/" target="_blank"></a> Sade Makhubele
+        Code hosted on
+        <a href="https://github.com/sademakhubele/SadeM-App.git" target="_blank"></a> Github 
+        Website hosted on Netlify 
+        <a herf="https://sademapp.netlify.app/" target="_blank"></a>
+
     </footer>
     </div>
 </body>
