--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
     <footer>
         Coded by
-        <a href="https://github.com/sademakhubele/" target="_blank"></a> Sade Makhubele
+        <a href="https://github.com/sademakhubele/" target="_blank">Sade Makhubele </a>    
         Code hosted on
-        <a href="https://github.com/sademakhubele/SadeM-App.git" target="_blank"></a> Github 
-        Website hosted on Netlify 
-        <a herf="https://sademapp.netlify.app/" target="_blank"></a>
+        <a href="https://github.com/sademakhubele/SadeM-App.git" target="_blank">open-sorce on Github</a>    
+        Website hosted on  
+        <a herf="https://sademapp.netlify.app/" target="_blank">Netlify</a>
 
     </footer>
     </div>
