--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="app">
     <header>
-        <form class="search-bar">
+        <form class="search-bar" id="searchBar">
             <input type="search" placeholder="Enter city.." required class="search-bar-input"/>
             <input type="submit" value="search" class="search-bar-button"/>
         </form>
@@ -38,9 +38,10 @@
         Code hosted on
         <a href="https://github.com/sademakhubele/SadeM-App.git" target="_blank">open-sorce on Github</a>    
         Website hosted on  
-        <a herf="https://sademapp.netlify.app/" target="_blank">Netlify</a>
-
+        <a herf="https://sademapp.netlify.app/" target="_blank"> Netlify    
     </footer>
     </div>
+
+    <script src="src/index.js"></script>
 </body>
 </html>
