added basic search engine no API

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div class="app">
     <header>
         <form class="search-bar" id="searchBar">
-            <input type="search" placeholder="Enter city.." required class="search-bar-input"/>
+            <input type="search" placeholder="Enter city.." required id="search-bar-input" class="search-bar-input"/>
             <input type="submit" value="search" class="search-bar-button"/>
         </form>
     </header>
     <main>
         <div>
-        <h1>Johanesburg</h1>
+        <h1 class="app-city" id="app-city">Johanesburg</h1>
         <p>Wednesday 17:21, Mostly Sunny
         <br>
         Precip: 0%
