--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
 
     <title>Document</title>
 </head>
 <body>
     <div class="app">
     <header>
-        <form class="search-bar" id="searchBar">
+        <form class="search-bar" id="search-bar">
             <input type="search" placeholder="Enter city.." required id="search-bar-input" class="search-bar-input"/>
             <input type="submit" value="search" class="search-bar-button"/>
         </form>
