--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <div>
-        <h1 class="app-city" id="app-city">Johanesburg</h1>
+        <h1 class="app-city" id="city">Johanesburg</h1>
         <p>Wednesday 17:21, Mostly Sunny
         <br>
         Precip: 0%
@@ -39,7 +39,7 @@
         Code hosted on
         <a href="https://github.com/sademakhubele/SadeM-App.git" target="_blank">open-sorce on Github</a>    
         Website hosted on  
-        <a herf="https://sademapp.netlify.app/" target="_blank"> Netlify    
+        <a herf="https://sademapp.netlify.app/" target="_blank"> Netlify</a>
     </footer>
     </div>
 
