added functionality of the search engine using API

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
         Wind: 14km/h
         </p>
     </div>
-        <div>
-        🌤21&#x2103;
+        <div class="weather-app-temp-container">
+       <div class="weather-app-icon">🌤</div>
+        <div class="weather-app-temp" id="temperatue">21<div class="temperatue-symbol"</div>
     </div>
     </main>
 
