added functionallity to wind-speed and humidity

--- a/index.html
+++ b/index.html
@@ -19,19 +19,22 @@
     <main>
         <div>
         <h1 class="app-city" id="city">Johanesburg</h1>
-        <p>Wednesday 17:21, Mostly Sunny
+        <p class="weather-app-details">
+        <strong><span id="time"> </span>,<span id="description">Mostly Sunny</span></strong>
+        <br> 
+        Precip:<strong> 0%</strong>
         <br>
-        Precip: 0%
+        Humidity: <strong id="humidity"></strong>
         <br>
-        Humidity: 34%
-        <br>
-        Wind: 14km/h
+        Wind: <strong id="wind-speed"></strong>
         </p>
     </div>
         <div class="weather-app-temp-container">
-       <div class="weather-app-icon">🌤</div>
-        <div class="weather-app-temp" id="temperatue">21<div class="temperatue-symbol"</div>
-    </div>
+        <div class="weather-app-icon">🌤</div>
+        <div class="weather-app-temp" id="temperature">
+       <strong >21</strong><span class="temperatue-icon">°C</span>
+        </div>
+     </div>
     </main>
 
     <footer>
