injected weather icon into j.s

--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
         </p>
     </div>
         <div class="weather-app-temp-container">
-        <div class="weather-app-icon">
-            <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"/>
-        </div>
+        <div id="icon"></div>
+       
         <div class="weather-app-temp" id="temperature">
        <strong >21</strong><span class="temperatue-icon">°C</span>
         </div>
